--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1318,6 +1318,15 @@ footer
         color #d96263
 
 /**************** Buttons ***************/
+.btn-paypal
+  border-radius 0 !important
+  color #fff
+  border-color steelblue
+  background steelblue
+  .btn-paypal&:hover, .btn-paypal&:focus
+    border-color steelblue
+    background steelblue !important
+    color #fff
 .btn-login-ca
   padding 10px 0
   border-radius 0 !important
