--- a/app/templates/shop/shipping-address.html
+++ b/app/templates/shop/shipping-address.html
@@ -1,38 +1,25 @@
-<div class="header-title">
-    <h2 class="title text-center">Datos de envío</h2>
-</div>
-<section id="content-area">
-    <div class="container">
-        <div class="cart-form">
-            <form name="paymentForm" novalidate>
-                <div class="row">
-                    <div class="col-sm-9 col-md-9 detail-payment-shop" style="background: #eee;">
-                        <div class="col-xs-12 col-sm-6 col-md-12">
-                            <div class="col-md-offset-3 col-md-6">
-                                <div class="form-item">
-                                    <label for="address1">Selecciona una direccion de envio</label>
-                                    <ui-select on-select="Payment.selectedAddress($model)"
-                                    ng-model="Payment.formDataPay.address" id="address1" name="address1"
-                                               title="Direccion" required>
-                                        <ui-select-match placeholder="Selecciona una dirección de envio *..." allow-clear="true">
-                                            {{$select.selected.address}}
-                                        </ui-select-match>
-                                        <ui-select-choices
-                                                repeat="address.id as address in Payment.addresses | filter: {address: $select.search}">
-                                            <div ng-bind-html="address.address | highlight: $select.search"></div>
-                                        </ui-select-choices>
-                                    </ui-select>
-                                </div>
-                            </div>
-                        </div>
+<div class="cart-form">
+    <form name="paymentForm" novalidate>
+        <div class="row">
+            <div class="col-sm-9 col-md-12 detail-payment-shop" style="background: #eee;">
+                <div class="col-xs-12 col-sm-6 col-md-12">
+                    <div class="form-item">
+                        <label for="address1">Selecciona una direccion de envio</label>
+                        <ui-select on-select="Payment.selectedAddress($model)"
+                                   ng-model="Payment.formDataPay.address" id="address1" name="address1"
+                                   title="Direccion" required>
+                            <ui-select-match placeholder="Selecciona una dirección de envio *..."
+                                             allow-clear="true">
+                                {{$select.selected.address}}
+                            </ui-select-match>
+                            <ui-select-choices
+                                    repeat="address.id as address in Payment.addresses | filter: {address: $select.search}">
+                                <div ng-bind-html="address.address | highlight: $select.search"></div>
+                            </ui-select-choices>
+                        </ui-select>
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
-    </div>
-</section>
-
-
-<div class="row">
-
+    </form>
 </div>
