--- a/app/templates/shop/shopcart.html
+++ b/app/templates/shop/shopcart.html
@@ -76,8 +76,8 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <a class="btn btn-success btn-cart btn-block" ng-click="ShopCart.processPurchase()">Procesar compra</a>
-                        <a class="btn btn-success btn-paypal btn-block"><i class=""></i>Pagar con Paypal</a>
+                        <a class="btn btn-success btn-cart btn-block" ng-click="ShopCart.processPurchase()"><i class="fa fa-credit-card"></i> Procesar compra</a>
+                        <a class="btn btn-success btn-paypal btn-block"><i class="fa fa-paypal"></i> Pagar con Paypal</a>
                     </div>
                 </div>
             </div>
