--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -112,22 +112,43 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="panel panel-default">
-                            <div class="panel-heading panel-white">
-                                <h4 class="panel-title">
-                                    <a data-toggle="collapse" href="" ng-click="Payment.paypal=!Payment.paypal"><span
-                                            class="fa fa-paypal">
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading panel-white">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" href="" ng-click="Payment.paypal=!Payment.paypal"><span
+                                        class="fa fa-paypal">
                                                     </span> Pago con Paypal</a>
-                                </h4>
+                            </h4>
+                        </div>
+                        <div id="collapseTwo" ng-if="Payment.paypal" class="panel-collapse collapse in">
+                            <div class="panel-body">
+                                <div class="row text-center">
+                                    <div class="col-md-12">
+                                        <img src="../../img/paypal.png" alt="">
+                                        <p>Luego de hacer clic en "Finalizar el pedido", serás
+                                            redirigido a PayPal para completar tu compra de forma segura.</p>
+                                    </div>
+                                </div>
                             </div>
-                            <div id="collapseTwo" ng-if="Payment.paypal" class="panel-collapse collapse in">
-                                <div class="panel-body">
-                                    <div class="row text-center">
-                                        <div class="col-md-12">
-                                            <img src="../../img/paypal.png" alt="">
-                                            <p>Luego de hacer clic en "Finalizar el pedido", serás
-                                                redirigido a PayPal para completar tu compra de forma segura.</p>
-                                        </div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading panel-white">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" href=""
+                                   ng-click="Payment.depositBank=!Payment.depositBank"><span
+                                        class="fa fa-university">
+                            </span> Depósito Bancario</a>
+                            </h4>
+                        </div>
+                        <div id="collapseThree" ng-if="Payment.depositBank" class="panel-collapse collapse in">
+                            <div class="panel-body">
+                                <div class="row text-center">
+                                    <div class="col-md-12">
+                                        <p>No. Cuenta: 874767446763746776 | Bancomer</p>
+                                        <span>Despues de relizar el deposito, porfavor ponte en contacto
+                                        con Corriente Alterna para finalizar su compra y realizar el envío.</span>
                                     </div>
                                 </div>
                             </div>
@@ -139,6 +160,7 @@
                 <div class="col-md-6"><a href="">Volver a forma de envío</a></div>
                 <div class="col-md-6">
                     <button ng-if="Payment.paypal" class="btn btn-cart" ui-sref="checkout">Finalizar el pedido</button>
+                    <!--<button ng-if="Payment.depositBank" class="btn btn-cart" ui-sref="checkout">Finalizar compra</button>-->
                 </div>
             </div>
         </div>
