--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -11,7 +11,7 @@
                         <div class="box-prod" ng-if="!Product.isPost">
                             <a ui-sref="product-detail({slug:product.slug})" title="Ver detalles del producto">
                                 <div class="bg-prod"
-                                     style="background-image: url('{{product.featuredImage.url }}')"></div>
+                                     style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default }}')"></div>
                                 <h3 class="prod-descrip">{{product.name | characters: 30}}</h3>
                                 <h4 class="prod-price"><strong>{{product.price | currency}}</strong></h4>
                             </a>
@@ -22,7 +22,7 @@
                         <div class="box-prod" ng-if="Product.isPost">
                             <a ui-sref="post_detail({slug:product.slug})">
                                 <div class="bg-prod"
-                                     style="background-image: url('{{product.featuredImage.url }}')"></div>
+                                     style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default }}')"></div>
                                 <h3 class="prod-descrip">{{product.title}}</h3>
                             </a>
                             <a ui-sref="post_detail({slug: product.slug})" class="btn btn-success btn-cart">Ver más</a>
