--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -43,7 +43,7 @@
                 <div class="col-sm-4 col-md-3" ng-repeat="product in Home.products">
                     <div class="box-prod">
                         <a href="" ui-sref="product-detail({slug:product.slug})" title="Ver detalles del producto">
-                            <div class="bg-prod" style="background-image: url('{{product.featuredImage.url }}')"></div>
+                            <div class="bg-prod" style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
                             <h3 class="prod-descrip">{{product.name}}</h3>
                         </a>
                         <h4 class="prod-price"><strong>{{product.price | currency}}</strong></h4>
