--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -11,7 +11,7 @@
                         <div class="box-prod">
                             <a ui-sref="category({slug:entry.slug})">
                                 <div class="bg-prod"
-                                     style="background-image: url('{{entry.featuredImage.url }}')"></div>
+                                     style="background-image: url('{{entry.featuredImage.url ? entry.featuredImage.url : initConfig.img_default}}')"></div>
                                 <h3 class="prod-descrip">{{entry.name}}</h3>
 
                                 <h4 class="prod-price"><strong>{{entry.excerpt}}</strong></h4>
