--- a/app/templates/shop/payment-method.html
+++ b/app/templates/shop/payment-method.html
@@ -104,8 +104,8 @@
             </div>
             <div class="col-md-12 text-center" style="margin-top: 20px">
                 <div class="col-md-6"><a href="" ui-sref="shopcart">Regresar al carrito</a></div>
-                <div class="col-md-6" ng-controller="OrderCtrl as Payment">
-                    <button class="btn btn-cart" ng-disabled="Form.$invalid" ng-click="Payment.shippingProcess()">Continuar</button>
+                <div class="col-md-6" ng-controller="OrderCtrl as Order">
+                    <button class="btn btn-cart" ng-disabled="Form.$invalid" ng-click="Order.createOrder()">Continuar</button>
                 </div>
             </div>
         </div>
