fixed history sales

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -131,6 +131,10 @@ body
   vertical-align middle
 
 /************** main css ******************/
+.bg-success
+  background-color #528a3b !important
+.bg-danger
+  background-color #d22626 !important
 .dropdown-menu 
   width 100vw
   min-width 90vw
