--- a/app/css/main.css
+++ b/app/css/main.css
@@ -135,6 +135,12 @@ body {
   margin-left: 2px;
   vertical-align: middle;
 }
+.bg-success {
+  background-color: #528a3b !important;
+}
+.bg-danger {
+  background-color: #d22626 !important;
+}
 .dropdown-menu {
   width: 100vw;
   min-width: 90vw;
