--- a/app/templates/auth/account-profile.html
+++ b/app/templates/auth/account-profile.html
@@ -11,28 +11,26 @@
                                     <hr/>
                                 </div>
                                 <div class="col-md-12">
-                                    <form class="padding form-horizontal">
+                                    <form class="padding form-horizontal" ng-submit="Profile.submitForm()">
                                         <div class="col-xs-12 col-md-6">
                                             <div class="form-item">
                                                 <label for="name">Nombre</label>
-                                                <input ng-model="Profile.formData.firstName" type="text" class="form-control" id="name" name="name"
+                                                <input ng-model="Profile.profileData.businessName" type="text" class="form-control" id="name" name="name"
                                                        placeholder="Nombre"
                                                        required>
                                             </div>
                                             <div class="form-item">
                                                 <label for="user">Usuario</label>
-
-                                                <input type="text" class="form-control" id="user" name="user"
-                                                       placeholder="Usuario"
+                                                <input ng-model="Profile.profileData.username" type="text" class="form-control" id="user" name="user"
+                                                       placeholder="Usuario" disabled
                                                        required>
                                             </div>
-                                            <div class="form-item">
-
+                                            <!--<div class="form-item">
                                                 <label for="password">Contraseña</label>
                                                 <input type="password" class="form-control" id="password"
                                                        name="password"
                                                        placeholder="Contraseña" required>
-                                            </div>
+                                            </div>-->
                                             <div class="form-item">
                                                 <select class="form-control-select">
                                                     <option>Estado</option>
@@ -42,13 +40,18 @@
                                                     <option>5</option>
                                                 </select>
                                             </div>
-
+                                            <div class="form-item">
+                                                <label for="phone">Teléfono</label>
+                                                <input ng-model="Profile.profileData.phone" type="text" class="form-control" id="phone"
+                                                       name="phone"
+                                                       placeholder="Teléfono" required>
+                                            </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-item">
                                                 <label for="secondname">Apellídos</label>
 
-                                                <input type="text" class="form-control" id="secondname"
+                                                <input ng-model="Profile.profileData.lastName" type="text" class="form-control" id="secondname"
                                                        name="secondname"
                                                        placeholder="Apellídos"
                                                        required>
@@ -56,16 +59,15 @@
                                             <div class="form-item">
                                                 <label for="email">Correo electrónico</label>
 
-                                                <input type="email" class="form-control" id="email" name="email"
+                                                <input ng-model="Profile.profileData.email" type="email" class="form-control" id="email" name="email"
                                                        placeholder="Correo electrónico" required>
                                             </div>
-                                            <div class="form-item">
-
+                                            <!--<div class="form-item">
                                                 <label for="password">Contraseña</label>
                                                 <input type="password" class="form-control" id="password"
                                                        name="password"
-                                                       placeholder="Contraseña" required>
-                                            </div>
+                                                       placeholder="Contraseña">
+                                            </div>-->
                                             <div class="form-item">
                                                 <select class="form-control-select">
                                                     <option>Ciudad</option>
@@ -75,11 +77,17 @@
                                                     <option>5</option>
                                                 </select>
                                             </div>
+                                            <div class="form-item">
+                                                <label for="mobile">Celular</label>
+                                                <input ng-model="Profile.profileData.mobile" type="text" class="form-control" id="mobile"
+                                                       name="password"
+                                                       placeholder="Celular">
+                                            </div>
                                         </div>
                                         <div class="col-md-12 text-center" style="padding-top: 30px;">
                                             <button type="submit" class="btn btn-outline-red"
-                                                    ng-disabled="Contact.busy">
-                                                <i class="fa fa-user"></i> Editar <span ng-if="Contact.busy"><i
+                                                    ng-disabled="Profile.busy">
+                                                <i class="fa fa-user"></i> Actualizar <span ng-if="Profile.busy"><i
                                                     class="fa fa-spinner fa-spin"></i></span>
                                             </button>
                                         </div>
