--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -83,7 +83,7 @@
                                                             <div class="form-group">
                                                                 <label for="cardCVC">CÓDIGO CV</label>
                                                                 <input type="tel" class="form-control" name="cardCVC"
-                                                                       ng-model="Payment.payment.cvc"
+                                                                       ng-model="Payment.payment.card.cvc"
                                                                        id="cardCVC" placeholder="CVC"
                                                                        required data-conekta="card[cvc]">
                                                             </div>
