--- a/app/templates/shop/partials/cart-details.html
+++ b/app/templates/shop/partials/cart-details.html
@@ -1,5 +1,5 @@
 
-    <div class="col-md-12 text-center" ng-repeat="item in Payment.items">
+    <div class="col-md-12 text-center" ng-repeat="item in Shipping.items">
         <div class="col-md-6" >
             <img ng-src="{{item.image}}" alt="" width="100">
         </div>
