--- a/app/templates/shop/shipping.html
+++ b/app/templates/shop/shipping.html
@@ -1,13 +1,13 @@
 <div id="content-area">
-    <div class="container" ng-controller="AddressCtrl as Address">
+    <div class="container">
         <div class="col-md-6 address-form">
             <div class="col-md-12 select-address" style="margin-bottom: 20px" ng-if="idUser">
-                <h3><a href="" ng-click="Payment.showAddress=!Payment.showAddress"><i class="fa fa-address-card"></i></a> Seleccionar dirección existente</h3>
-                <ng-include ng-if="Payment.showAddress" src="'/templates/shop/shipping-address.html'"></ng-include>
+                <h3><a href="" ng-click="Shipping.showAddress=!Shipping.showAddress"><i class="fa fa-address-card"></i></a> Seleccionar dirección existente</h3>
+                <ng-include ng-if="Shipping.showAddress" src="'/templates/shop/shipping-address.html'"></ng-include>
             </div>
             <div class="col-md-12">
                 <h3><i class="fa fa-paper-plane"></i> Nueva direccíon de envío</h3>
-                <form action="" class="form-horizontal" name="Form" novalidate ng-submit="Payment.shippingProccess()">
+                <form action="" class="form-horizontal" name="Form" novalidate ng-submit="Shipping.shippingProccess()">
                     <div class="col-md-6">
                         <div class="form-item">
                             <label for="state">Estado</label>
@@ -98,13 +98,13 @@
                     </div>
                     <div class="col-md-12" ng-if="idUser">
                         <input type="checkbox"><span>Guardar mi información para la aproxima ocasión</span>
-                        {{Payment.saveAddressNew}}
+                        {{Shipping.saveAddressNew}}
                     </div>
                 </form>
             </div>
             <div class="col-md-12 text-center" style="margin-top: 20px">
                 <div class="col-md-6"><a href="" ui-sref="shopcart">Regresar al carrito</a></div>
-                <div class="col-md-6" ng-controller="OrderCtrl as Order">
+                <div class="col-md-6">
                     <button class="btn btn-cart" ng-disabled="Form.$invalid" ng-click="Order.createOrder()">Continuar</button>
                 </div>
             </div>
